# hieuxyz_rpc_py

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: main.py
src/hieuxyz_rpc/: __init__.py  client.py
src/hieuxyz_rpc/gateway/: discord_websocket.py
src/hieuxyz_rpc/gateway/entities/: identify.py  opcode.py  types.py
src/hieuxyz_rpc/rpc/: hieuxyz_rpc.py  image_service.py  rpc_image.py
src/hieuxyz_rpc/utils/: logger.py
